<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/gradient_background"
        android:orientation="vertical" tools:context=".LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">

        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@mipmap/logo" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:orientation="vertical">
        <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:background="@drawable/circle_angle_white"
                android:hint="@string/username"
                android:textSize="20sp"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="20dp"/>-->
        <!-- input username -->
        <!--<android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:hint="@string/username" />
        </android.support.design.widget.TextInputLayout>-->

        <!-- input password -->
        <!--<android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>-->

        <!--<EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_angle_white"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:hint="@string/password" />-->

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/username"
                android:textSize="24sp"
                android:id="@+id/username"
                android:singleLine="true"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="24sp"
                android:id="@+id/password"
                android:singleLine="true"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_angle_red"
                android:text="@string/login_button"
                android:textAllCaps="false"
                android:layout_marginTop="40dp"
                android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_link"
                android:textAllCaps="false"
                android:background="@null"
                android:textSize="18sp"
                android:textAlignment="center"/>
    </LinearLayout>

</LinearLayout>
